<resources>
    <string name="app_name">Termina</string>

    <!-- Intro -->
    <string name="first_page_header">Learn your pregnancy options</string>
    <string name="first_page_title">We\'re here to help. We\'re a non-profit based in SF called SFSI.</string>
    <string name="we_no_doctor_header">We\'re not medical professionals</string>
    <string name="we_no_doctor_title">Disclaimer</string>
    <string name="we_no_doctor_disclaimer">
        All content found on the app, including: text, images, audio, or other formats were created
        for informational purposes only. Offerings for continuing education credits are clearly
        identified and the appropriate target audience is identified. The Content is not intended to
        be a substitute for professional medical advice, diagnosis, or treatment.
        Always seek the advice of your physician or other qualified health provider with any questions
        you may have regarding a medical condition. Never disregard professional medical advice or
        delay in seeking it because of something you have read on this app.\n\n

        If you think you may have a medical emergency, call your doctor, go to the emergency department,
        or call 911 immediately. SFSI does not recommend or endorse any specific tests, physicians,
        products, procedures, opinions, or other information that may be mentioned on the app.
        Reliance on any information provided by the app is solely at your own risk.\n\n

        The app may contain health- or medical-related materials or discussions regarding sexually
        explicit disease states. If you find these materials offensive, you may not want to use our app.
        The app and its Content are provided on an "as is" basis.\n\n

        Links to educational content not created by SFSI are taken at your own risk. SFSI is not
        responsible for the claims of external websites and education companies.</string>

    <!-- Input -->
    <string name="input_header">Pregnancy Options</string>
    <string name="input_description">To give you the most accurate information, tell us a bit about yourself. Your information is always secure and never saved.</string>
    <string name="input_period_question">When was the first day of your last period?</string>
    <string name="input_period_details">If you\'re not sure, you can select a range of possible days, up to one week.</string>
    <string name="input_state_question">Where do you live?</string>
    <string name="input_state_details">Laws vary by state.</string>
    <string name="input_age_question">How old are you?</string>
    <string name="input_age_details">Your age can determine what options are available.</string>
    <string name="input_show_options">Show My Options</string>
    <string-array name="ages_array">
        <item>18 &amp; over</item>
        <item>17</item>
        <item>16</item>
        <item>15 &amp; under</item>
    </string-array>
    <string-array name="input_states_array">
        <item >AL</item>
        <item >AK</item>
        <item >AZ</item>
        <item >AR</item>
        <item >CA</item>
        <item >CO</item>
        <item >CT</item>
        <item >DC</item>
        <item >DE</item>
        <item >FL</item>
        <item >GA</item>
        <item >HI</item>
        <item >ID</item>
        <item >IL</item>
        <item >IN</item>
        <item >IA</item>
        <item >KS</item>
        <item >KY</item>
        <item >LA</item>
        <item >ME</item>
        <item >MD</item>
        <item >MA</item>
        <item >MI</item>
        <item >MN</item>
        <item >MS</item>
        <item >MO</item>
        <item >MT</item>
        <item >NE</item>
        <item >NV</item>
        <item >NH</item>
        <item >NJ</item>
        <item >NM</item>
        <item >NY</item>
        <item >NC</item>
        <item >ND</item>
        <item >OH</item>
        <item >OK</item>
        <item >OR</item>
        <item >PA</item>
        <item >RI</item>
        <item >SC</item>
        <item >SD</item>
        <item >TN</item>
        <item >TX</item>
        <item >UT</item>
        <item >VT</item>
        <item >VA</item>
        <item >WA</item>
        <item >WV</item>
        <item >WI</item>
        <item >WY</item>
    </string-array>
    <string name="fa_icon_medkit">&#xf0fa;</string>
    <string name="fa_icon_user_md">&#xf0f0;</string>
    <string name="fa_icon_group">&#xf0c0;</string>
    <string name="fa_icon_child">&#xf1ae;</string>


    <!-- Action Cards -->
    <string name="action_card_restrictions">Restrictions</string>
    <string name="action_card_financial">Financial Information</string>
    <string name="action_card_resources">Resources</string>
    <string name="action_card_restriction">Restrictions may apply</string>
    <string name="action_card_subtitle_available_until" context="%1 - Put date in String">Available until approx. %1$s</string>
    <string name="action_card_subtitle_not_available_from" context="%1 - Put number of weeks in int">This is not available after %1$d weeks.</string>
    <string name="action_card_learn_more">Learn More</string>
    <string name="action_card_learn_less">Less</string>
</resources>
