<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/option_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/input_header"
                style="@style/Termina.Text.Title.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_header"/>

            <TextView
                android:id="@+id/input_description"
                style="@style/Termina.Text.Contextual"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_description"/>

            <TextView
                android:id="@+id/input_period_question"
                style="@style/Termina.Text.Question"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_period_question"/>

            <TextView
                android:id="@+id/input_period_details"
                style="@style/Termina.Text.Contextual"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_period_details"/>

            <Button
                android:id="@+id/last_period_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                android:focusable="false"
                android:hint="Select a date"/>

            <TextView
                android:id="@+id/input_state_question"
                style="@style/Termina.Text.Question"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_state_question"/>

            <Button
                android:id="@+id/state_input"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Select State"
                android:minWidth="@dimen/spinner_min_width"/>

            <TextView
                android:id="@+id/input_age_question"
                style="@style/Termina.Text.Question"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_age_question"/>

            <TextView
                android:id="@+id/input_age_details"
                style="@style/Termina.Text.Contextual"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_age_details"/>

            <Button
                android:id="@+id/age_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Select Age"
                android:minWidth="@dimen/spinner_min_width"/>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward_white_24dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:fabSize="normal"
        app:layout_anchor="@+id/option_scroll_view"
        app:layout_anchorGravity="bottom|right|end"
        />

</android.support.design.widget.CoordinatorLayout>